Added Image Generation Support

--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/genai": "^1.12.0",
     "@langchain/community": "^0.3.49",
     "@langchain/core": "^0.3.66",
     "@langchain/openai": "^0.6.3",
     "langchain": "^0.3.30",
     "next": "15.4.5",
     "node-cron": "^4.2.1",
+    "openai": "^5.11.0",
     "puppeteer": "^24.15.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "together-ai": "^0.21.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
