Updated the AI Agent. Now more advance with reasoning

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "puppeteer": "^24.15.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "together-ai": "^0.21.0"
+    "together-ai": "^0.21.0",
+    "zod": "^4.0.15"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
