--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@langchain/community": "^0.3.49",
     "@langchain/core": "^0.3.66",
     "@langchain/openai": "^0.6.3",
+    "appwrite": "^18.2.0",
     "langchain": "^0.3.30",
+    "lucide-react": "^0.536.0",
     "next": "15.4.5",
     "node-cron": "^4.2.1",
     "openai": "^5.11.0",
